# camoufox-cli

./: Makefile  README.md  pyproject.toml
cli/: Cargo.toml
cli/src/: commands.rs  connection.rs  main.rs
js/: package-lock.json  package.json  pnpm-lock.yaml
js/src/: browser.ts  cli.ts  commands.ts  daemon.ts  identity.ts  ipc.ts  proxy.ts  runtime.ts  server.ts
js/tests/: browser-launch.test.ts  cli.test.ts  commands.test.ts  e2e.test.ts  ipc.test.ts  proxy.test.ts  runtime.test.ts  server.test.ts
skills/camoufox-cli/: SKILL.md
skills/camoufox-cli/references/: commands.md
src/camoufox_cli/: __main__.py  browser.py  cli.py  commands.py  identity.py  proxy.py  server.py
src/cfox/: __main__.py  commands.py  server.py
tests/: fixture.html  test_cli.py  test_commands.py  test_e2e.py  test_proxy.py
