[project]
name = "camoufox-cli"
version = "0.1.0"
description = "Anti-detect browser CLI for AI agents, powered by Camoufox"
requires-python = ">=3.10"
dependencies = [
    "camoufox[geoip]",
    "playwright",
]

[project.scripts]
camoufox-cli = "camoufox_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camoufox_cli"]
